app/media-server/qbittorrent/qbittorrent-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - port: 32567
    name: torrent-tcp
    nodePort: 32567
    protocol: TCP
  - port: 32567
    name: torrent-udp
    nodePort: 32567
    protocol: UDP
  type: NodePort
