app/media-server/qbittorrent/torrents-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: qbittorrent
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: qbittorrent.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - qbittorrent.home.adaminformatika.hu
    secretName: qbittorrent.home.adaminformatika.hu
